Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION:  There is an unsightly wrapping issue on the column lists.  The text is going above and below the <ol> number; Fixing it with list-style-position: inside and padding-right: 1rem (I hope).

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2407,6 +2407,8 @@ ol.flowMd {
 }
 ol.flowMd li {
 	width: 245px;
+	list-style-position:inside;
+	padding-right: 1rem;
 }
 ol.flowMd li a {
 	display: inline-block;
